<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <string name="app_version">1.27.0</string>
    <string name="show_password">পাসওয়ার্ড দেখুন</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="view_image"> ইমেজ দেখুন </string>
    <string name="annotate_image">Annotate Image</string>
    <string name="signature_capture">Signature Capture</string>
    <string name="view_video">  ভিডিও দেখুন </string>
    <string name="choose_audio">অডিও পছন্দ করুন</string>
    <string name="add_repeat_question">Add \"%s\"?</string>
    <string name="add_repeat">যোগ করুন</string>
    <string name="dont_add_repeat">যোগ করবেন না</string>
    <string name="bn_username">ব্যবহারকারীর নাম</string>
    <string name="bn_password">পাসওয়ার্ড</string>
    <string name="add_another_menu">আরও একটি যোগ করুন</string>
    <string name="cancel">বাতিল</string>
    <string name="cancel_loading_form">বাতিল</string>
    <string name="cancel_location">বাতিল</string>
    <string name="canceling">বাতিল</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as finalized. It may be encrypted.</string>
    <string name="capture_audio">শব্দ রেকর্ড</string>
    <string name="capture_image">ছবি তোলা </string>
    <string name="capture_osm">ডাটা কালেক্টর অ্যাপলিকেশন চালু করুন</string>
    <string name="recapture_osm">পুনরায় OSM ট্যাগিং করুন</string>
    <string name="capture_video">ভিডিও রেকর্ড</string>
    <string name="change_language">ভাষা পরিবর্তন </string>
    <string name="change_password">পাসওয়ার্ড পরিবর্তন</string>
    <string name="change_username">ব্যবহারকারীর নাম পরিবর্তন</string>
    <string name="download_form_url">Download URL</string>
    <string name="submission_form_url">Submission URL</string>
    <string name="notification_url">Notification URL</string>
    <string name="user_data_report_url">Report URL</string>
    <string name="user_dashboard_url">Dashboard URL</string>
    <string name="clearanswer_confirm">উত্তর মুছে \"%s\" ফেলতে চান?</string>
    <string name="clear_answer">উত্তর মুছে ফেলুন</string>
    <string name="clear_answer_ask">উত্তর মুছে ফেলতে চান?</string>
    <string name="clear_answer_no">বাতিল</string>
    <string name="data">ডাটা</string>
    <string name="data_saved_error">দু:খিত, ফরম সংরক্ষিত হয়নি!</string>
    <string name="data_saved_ok">ফরম সংরক্ষিত হয়েছে|</string>
    <string name="save_point_error">ত্রুটি সংরক্ষণ উদ্ধার পয়েন্টঃ %s</string>
    <string name="default_completed">ডিফল্ট থেকে চূড়ান্ত করন</string>
    <string name="default_completed_summary">ডিফল্ট ভাবে চূড়ান্ত ফর্ম চিন্হিত করে রাখা</string>
    <string name="delete_confirm">ফরম %s মুছে দিন</string>
    <string name="delete_file">ফাইল ডিলিট</string>
    <string name="delete_no">মুছবেন না</string>
    <string name="delete_repeat">রিপিট অপসারণ</string>
    <string name="delete_repeat_ask">রিপিট অপসারন করবেন?</string>
    <string name="delete_repeat_confirm">\"%s\" গ্রুপ এবং এর সকল সাব-গ্রুপ অপসারণ করতে চান?</string>
    <string name="delete_repeat_no">বাতিল</string>
    <string name="delete_yes">ফর্ম মুছুন</string>
    <string name="discard_answer">উত্তর মুছুন</string>
    <string name="discard_group">গ্রুপ মুছুন</string>
    <string name="download">নির্বাচিতটি ডাউনলোড করুন</string>
    <string name="download_forms_result">ডাউনলোড ফলাফল</string>
    <string name="downloading_data">সার্ভারের সাথে সংযুক্ত হচ্ছে</string>
    <string name="do_not_change">বাতিল</string>
    <string name="do_not_exit">বাতিল</string>
    <string name="do_not_save">পরিবর্তন উপেক্ষা করুন</string>
    <string name="enter_data">খালি ফর্ম পুরন করুন</string>
    <string name="enter_data_button"> </string>
    <string name="error_occured">কোথাও ভুল হয়েছে</string>
    <string name="error_attaching_binary_file">মিডিয়া \"%s\" সংযুক্ত করার সময় ত্রুটি সংঘটিত হয়েছে</string>
    <string name="fetching_file">নামানো হচ্ছে %1$s.\n\n ফরম %2$s এর %3$s ফরম/(ফরমগুলি)</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="forms">খালি ফর্ম</string>
    <string name="getting_location">লোকেশন লোড হচ্ছে</string>
    <string name="get_barcode">বারকোড নিন</string>
    <string name="get_forms">খালি ফর্ম ডাউনলোড করুন</string>
    <string name="manage_forms">  </string>
    <string name="get_location">লোকেশান সংরক্ষন করুন</string>
    <string name="provider_disabled_error">দুঃখিত, অবস্থান প্রদানকারী সেবা বন্ধ আছে!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_space_in_answer_singular">Warning: underlying value %s has spaces</string>
    <string name="invalid_space_in_answer_plural">Warning: underlying values %s have spaces</string>
    <string name="jump_to_beginning">শুরুতে যান</string>
    <string name="jump_to_end">শেষে যান</string>
    <string name="jump_to_previous">পেছনে যান</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="loading_form">ফর্ম লোড হচ্ছে</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="manage_files"> সংরক্ষিত ফর্ম মুছুন </string>
    <string name="mark_finished">ফর্মটি চূড়ান্ত করুন </string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">নেটওয়ার্ক কানেকশন নাই</string>
    <string name="no_items_display">দেখানোর মত কিছু নেই</string>
    <string name="no_items_display_forms"> দেখানোর মত কিছু নেই। \n\n নতুন ফর্ম নিন ও পুরন করুন।</string>
    <string name="no_items_display_sent_forms"> দেখানোর মত কিছু নেই। \n\n দেখার পূর্বে সম্পন্ন ফর্ম পাঠানোর চেষ্টা করুন। </string>
    <string name="no_items_display_instances"> দেখানোর মত কিছু নেই। \n\n পাঠানোর পূর্বে ফর্ম সম্পাদনার চেষ্টা করুন। </string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">অনুগ্রহ পূর্বক অপেক্ষা করুন।এটা কয়েক মিনিট পর্যন্ত সময় নিতে পারে।</string>
    <string name="quit_application">বাহির %s</string>
    <string name="quit_entry">ফর্ম সংরক্ষন এবং বাহির </string>
    <string name="refresh">Refresh</string>
    <string name="group_label">গ্রুপ</string>
    <string name="repeatable_group_label">Repeatable Group</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="required_answer_error">Sorry, this response is required!</string>
    <string name="review_data"> </string>
    <string name="review_data_button">‎‎‎‎</string>
    <string name="save_all_answers">ফর্ম সংরক্ষন করুন</string>
    <string name="save_enter_data_description"> আপনি ফর্মটি শেষে রয়েছেন %s.</string>
    <string name="saving_form">ফর্ম সংরক্ষিত হচ্ছে</string>
    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="send_data"></string>
    <string name="send_data_button"></string>
    <string name="send_selected_data">সিলেক্ট করা ফর্ম পাঠান</string>
    <string name="send_selected_data_internet">Send (Internet)</string>
    <string name="send_selected_data_sms">Send (SMS)</string>
    <string name="view_sent_forms"></string>
    <string name="view_sent_forms_button"></string>
    <string name="server_auth_credentials">Invalid username or password for server: %s</string>
    <string name="server_requires_auth">Server Requires Authentication</string>
    <string name="server_url">URL</string>
    <string name="server_preferences"> সার্ভার সেটিংস্‌ </string>
    <string name="trigger">ঠিক আছে। দয়া করে সামনের দিকে যান।</string>
    <string name="uploading_data">ফর্ম পাঠানো হচ্ছে</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="username">Username</string>
    <string name="get_download_form_url">Download Path</string>
    <string name="get_submit_form_url">Submission Path</string>
    <string name="get_notification_url">Notification Path</string>
    <string name="get_user_data_report_url">Report Path</string>
    <string name="get_user_dashboard_url">Dashboard Path</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="general_preferences">General Settings</string>
    <string name="client">User interface</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected splash image</string>
    <string name="default_splash_path">ODK Default</string>
    <string name="select_another_image">Select another image</string>
    <string name="use_odk_default">Use default image</string>
    <string name="change_splash_path">Change image</string>
    <string name="keep_changes">পরিবর্তন সংরক্ষণকরুন</string>
    <string name="change_formlist_url">/GetForms/index.php</string>
    <string name="change_protocol">Platform</string>
    <string name="change_submission_url">/Main/submission.php</string>
    <string name="formlist_url">Form list path</string>
    <string name="submission_url">Submission path</string>
    <string name="font_size">Font Size</string>
    <string name="change_font_size">ফন্ট আকার পরিবর্তন</string>
    <string name="access_error">Error while accessing %s: </string>
    <string name="manifest_server_error">Manifest reply does not report an OpenRosa version — bad server?</string>
    <string name="root_element_error">Root element is not &lt;manifest\&gt; — was %s</string>
    <string name="root_namespace_error">Root element Namespace is incorrect: %s</string>
    <string name="manifest_tag_error">Manifest entry %s is missing one or more tags: filename, hash, or downloadUrl</string>
    <string name="form_download_progress">%1$s. Getting media files: %2$s of %3$s</string>
    <string name="fetching_manifest">%s. Getting manifest </string>
    <string name="success">সাফল্য</string>
    <string name="failures">Failures</string>
    <string name="no_forms_uploaded">দুঃখিত। কোন ফর্ম আপলোড হয়নি।</string>
    <string name="upload_results">  আপলোড ফলাফল </string>
    <string name="xform_parse_error">XForm parse error for %1$s: %2$s is missing or invalid.</string>
    <string name="choose_file">Choose File</string>
    <string name="choose_sound">Choose Sound</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected">Selected: </string>
    <string name="aggregate_preferences">Solvers Aggregate settings</string>
    <string name="sms_submission_preferences">SMS submission settings</string>
    <string name="submission_transport">Submission transport (advanced)</string>
    <string name="submission_transport_types_title">Send submissions via</string>
    <string name="change_server_url">Server URL</string>
    <string name="sms_pref_dialog_title">Destination phone number</string>
    <string name="sms_pref_title">Destination phone number</string>
</resources>