<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/server_preferences"
        android:title="@string/aggregate_preferences">
        <EditTextPreference
            android:dialogTitle="@string/change_server_url"
            android:inputType="textNoSuggestions"
            android:key="server_url"
            android:title="@string/server_url" />
        <!--<EditTextPreference
            android:dialogTitle="@string/change_username"
            android:inputType="textNoSuggestions"
            android:key="username"
            android:title="" />
        <EditTextPreference
            android:dialogTitle="@string/change_password"
            android:inputType="textPassword"
            android:key="password"
            android:title="" />-->
        <EditTextPreference
            android:dialogTitle="@string/download_form_url"
            android:inputType="textNoSuggestions"
            android:key="download_form_url"
            android:title="@string/get_download_form_url" />
        <EditTextPreference
            android:dialogTitle="@string/submission_form_url"
            android:inputType="textNoSuggestions"
            android:key="submission_form_url"
            android:title="@string/get_submit_form_url" />
        <EditTextPreference
            android:dialogTitle="@string/notification_url"
            android:inputType="textNoSuggestions"
            android:key="notification_url"
            android:title="@string/get_notification_url" />
        <EditTextPreference
            android:dialogTitle="@string/user_data_report_url"
            android:inputType="textNoSuggestions"
            android:key="user_data_report_url"
            android:title="@string/get_user_data_report_url" />
        <EditTextPreference
            android:dialogTitle="@string/user_dashboard_url"
            android:inputType="textNoSuggestions"
            android:key="user_dashboard_url"
            android:title="@string/get_user_dashboard_url" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="submission_transport_preference"
        android:title="@string/submission_transport">
        <ListPreference
            android:dialogTitle="@string/submission_transport_types_title"
            android:entries="@array/transport_type_entries"
            android:entryValues="@array/transport_type_entry_values"
            android:key="submission_transport_type"
            android:title="@string/submission_transport_types_title" />
    </PreferenceCategory>
    <org.odk.collect.bdrs.preferences.ExtendedPreferenceCategory
        android:key="sms_preference"
        android:title="@string/sms_submission_preferences">
        <org.odk.collect.bdrs.preferences.ExtendedEditTextPreference
            android:dialogTitle="@string/sms_pref_dialog_title"
            android:inputType="phone"
            android:key="sms_gateway"
            android:title="@string/sms_pref_title" />
    </org.odk.collect.bdrs.preferences.ExtendedPreferenceCategory>
</PreferenceScreen>